<resources>

    <!-- MAIN -->
    <string name="app_name" override="true">ECLIPSE</string>
    <string name="app_tag_line">Movie Matching App</string>

    <!-- SIGN IN -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Sign in / Register</string>
    <string name="sign_in_bg">Sign in background</string>

    <!-- MENU -->
    <string name="home">Home</string>
    <string name="friends">Friends</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>

    <!-- HOME -->
    <string name="welcome_back">Welcome Back,</string>
    <string name="popular">Popular Movies</string>
    <string name="most_popular_movies">Most popular movies</string>
    <string name="top_rated">Top Rated</string>
    <string name="highest_rated_movies">Highest rated movies of all time</string>
    <string name="upcoming">Upcoming</string>
    <string name="stay_updated">Stay updated with the latest movies</string>

    <!-- MOVIES -->
    <string name="movies">Movies</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="movie_header">Movie Header</string>

    <!-- WATCHLIST -->
    <string name="watchlist">Watchlist</string>
    <string name="add_to_watchlist">Add to watchlist</string>
    <string name="remove_from_watchlist">Remove from watchlist</string>

    <!-- SEARCH -->
    <string name="type_here">Type here…</string>
    <string name="search_movies">Search for movies</string>
    <string name="search_tv">Search for TV shows</string>

    <!-- FRIENDS -->
    <string name="search_users">Search for users</string>
    <string name="friend_list">Your Friend List</string>
    <string name="chat">Chat</string>
    <string name="match_movies">Match</string>
    <string name="matched_with">Movies Matched with</string>
    <string name="add_friend">Send friend request</string>
    <string name="accept_friend">Accept friend request</string>
    <string name="ignore_friend">Ignore friend request</string>
    <string name="pending_friend">Pending friend request</string>
    <string name="remove_friend">Remove friend</string>
    <string name="no_friends">You haven\'t added any friends yet. Try searching for users above.</string>

    <!-- CHAT -->
    <string name="type_message">Type Message</string>
    <string name="image">Image</string>

    <!-- ACCOUNT -->
    <string name="name">Name</string>
    <string name="bio">Bio</string>
    <string name="save">Save</string>
    <string name="sign_out">Sign Out</string>
    <string name="user_profile_image">User Profile Image</string>
    <string name="your_watchlist">Your Watchlist</string>
    <string name="empty_watchlist">You haven\'t added any movies to your watchlist yet.</string>

    <!-- ERRORS -->
    <string name="error_fetch_movies">Please check your internet connection</string>
    <string name="no_data">No Data</string>
    <string name="no_results">No Results</string>

    <!-- TEMP -->
    <string name="lorem_ipsum">The path of the righteous man is beset on all sides by the iniquities of the selfish and the tyranny of evil men. Blessed is he who, in the name of charity and good will, shepherds the weak through the valley of darkness, for he is truly his brother\'s keeper and the finder of lost children. And I will strike down upon thee with great vengeance and furious anger those who would attempt to poison and destroy My brothers. And you will know My name is the Lord when I lay My vengeance upon thee.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
