<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity"
    android:background="@color/white">

    <TextView
        android:id="@+id/text_view_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nisantasi_regular"
        android:text="@string/app_name"
        android:textColor="@color/textLight"
        android:textSize="50sp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/text_view_app_tag_line"
        app:layout_constraintHorizontal_bias="0.5"
        tools:ignore="PrivateResource" />

    <TextView
        android:id="@+id/text_view_app_tag_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/circe_light"
        android:text="@string/app_tag_line"
        android:textColor="@color/textRed"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_app_name"
        app:layout_constraintBottom_toTopOf="@+id/image_view_bg_sign_in"/>

    <ImageView
        android:id="@+id/image_view_bg_sign_in"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_eclipse_horizontal"
        android:contentDescription="@string/sign_in_bg"
        app:layout_constraintTop_toBottomOf="@id/text_view_app_tag_line"
        app:layout_constraintDimensionRatio="5:16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <pl.looksoft.shadowlib.ShadowLayout
        android:id="@+id/shadowbox_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/image_view_bg_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/image_view_bg_sign_in"
        app:layout_constraintVertical_bias="0.5
"
        app:shadowLayoutBlur="20dp"
        app:shadowLayoutColor="#33256B9E"
        app:shadowLayoutDx="0dp"
        app:shadowLayoutDy="0dp"
        app:shadowLayoutSpread="0dp">

        <Button
            android:id="@+id/account_sign_in"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/comp_sign_in_button"
            android:fontFamily="@font/circe"
            android:padding="0dp"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:text="@string/login"
            android:textColor="@color/textLight" />
    </pl.looksoft.shadowlib.ShadowLayout>

</androidx.constraintlayout.widget.ConstraintLayout>